Fix vertical spacing on Opportunity Instance page

--- a/client/app/opportunity-instances/_OpportunityInstancesStyle.scss
+++ b/client/app/opportunity-instances/_OpportunityInstancesStyle.scss
@@ -27,6 +27,7 @@
 
 h1.event-title{
   line-height: 1.3;
+  margin-bottom: 0;
 }
 
 
